# gematria

./: WORKSPACE  python.bzl
.github/workflows/: main.yaml
gematria/basic_block/: BUILD.bazel  basic_block_protos.cc
gematria/basic_block/python/: throughput_protos.py
gematria/datasets/: BUILD  BUILD.bazel  annotating_importer.cc  annotating_importer.h  annotating_importer_test.cc  basic_block_utils_test.cc  bhive_importer.cc  bhive_importer.h  json_importer.cc
gematria/datasets/python/: BUILD.bazel  annotating_importer.cc  annotating_importer_test.py  import_annotated_basic_blocks.py  process_dataset.py
gematria/granite/: graph_builder.cc  graph_builder.h  graph_builder_model_inference.cc  graph_builder_test.cc
gematria/granite/python/: gnn_model_base.py  gnn_model_base_test.py  granite_flags.py  graph_builder.cc  graph_builder_model_base.py  graph_builder_model_base_test.py  graph_builder_test.py  run_granite_model.py  token_graph_builder_model.py
gematria/io/python/: utils.py
gematria/model/python/: inference.py  inference_test.py  main_function.py  main_function_test.py  model_base.py  model_base_test.py  token_model.py  token_model_test.py  training.py  training_test.py
gematria/sequence/python/: sequence_model.py
gematria/testing/testdata/: simple_x86_elf_object  simple_x86_elf_object.perf.data  simple_x86_elf_object_source.c
tools/: BUILD.bazel  build_pip_package.py
